fixed spacing above content

--- a/app/assets/stylesheets/defaults.scss
+++ b/app/assets/stylesheets/defaults.scss
@@ -198,7 +198,7 @@ form {
   border: 1.5em solid #000;
   position: absolute; // necessary to go to the right in desktop view
   left: 57%;
-  top: 16%;
+//  top: 16%;
   width: 450px;
   padding-bottom: 20px;
   @include mobile {
